--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -68,6 +68,7 @@ bot_support_role_id = 0  # The ID used to determine whether or not the user is p
     thumbnail = ""  # A url to an image to be added to the embed
     image = ""  # A url to an image to be added to the embed
 
+
     # These are added as link buttons the bottom of the message.
     # Your bot invite (if enabled) will always be added as the first button.
     [bot_info.links.Website]
@@ -76,7 +77,7 @@ bot_support_role_id = 0  # The ID used to determine whether or not the user is p
     [bot_info.links."Support Server"]  # You CAN have multiple words in a label
         url = "https://example.com/#your_guild_invite"
     [bot_info.links.Git]
-        url = "https://example.com/#your_git_link"
+        url = "https://example.com/#your_github_link"
     [bot_info.links.Donate]
         url = "https://example.com/#your_donate_link"
     [bot_info.links.Vote]
