--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -7,4 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: psf/black@stable
+      - uses: psf/black@stable 
+        with:
+          options: "--check --verbose --color"
